--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.6.1
+  path_provider: ^2.1.0
+  open_filex: ^4.3.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -63,6 +65,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/beginners/
+    - assets/Docs/beginner/
 
 
 
