--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   flutter_screenutil: ^5.6.1
   path_provider: ^2.1.0
   open_filex: ^4.3.2
+  flick_video_player: ^0.5.0
+  video_player: ^2.7.0
+  csslib: 0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
