--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   url_launcher: ^6.1.6
   http: ^0.13.5
   rename: ^2.1.1
+  provider: ^6.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
