--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^0.13.5
   rename: ^2.1.1
   provider: ^6.0.5
+  pinput: ^2.2.12
 
 
   # The following adds the Cupertino Icons font to your application.
