--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  page_transition: ^2.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
