--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   provider: ^6.0.5
   flutter_spinkit: ^5.1.0
   page_transition: ^2.1.0
+  tutorial_coach_mark: ^1.2.11
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
