--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   page_transition: ^2.1.0
+  tutorial_coach_mark: ^1.2.11
 
 
   # The following adds the Cupertino Icons font to your application.
